Make recipe 100% Java 11 bytecode compatible (major version 55)